--- a/views/index.html
+++ b/views/index.html
@@ -23,8 +23,14 @@
         </button>
         <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto mx-4">
-            <li class="nav-item mx-4">
-              <a class="nav-link navtext" href="/collections">Collections</a>
+            <li class="nav-item dropdown mx-4">
+              <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Explore
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item droptext" href="/collections">Collections</a></li>
+                <li><a class="dropdown-item droptext" href="/users">Users</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
