--- a/views/search.html
+++ b/views/search.html
@@ -9,20 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@400;500&family=M+PLUS+1p:wght@400&family=Tajawal:wght@300;400&display=swap" rel="stylesheet">   
-    <style>
-      body {
-        font-family: 'Barlow', sans-serif;
-        font-size:1.4em;
-      }
-      .navtext {
-        font-weight: 500;
-        font-size:1.3rem;
-      }
-      .droptext {
-        font-weight: 500;
-        font-size:1.1rem;
-      }
-    </style>
+    <link rel="stylesheet" href="/source/index.css">
   </head>
   <body>
     <nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color:rgba(8, 150, 115, 0.75)">
@@ -36,8 +23,14 @@
         </button>
         <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto mx-4">
-            <li class="nav-item mx-4">
-              <a class="nav-link navtext" href="/collections">Collections</a>
+            <li class="nav-item dropdown mx-4">
+              <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Explore
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item droptext" href="/collections">Collections</a></li>
+                <li><a class="dropdown-item droptext" href="/users">Users</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
