--- a/views/tradesNEW.html
+++ b/views/tradesNEW.html
@@ -23,8 +23,14 @@
         </button>
         <div class="container-fluid collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav mr-auto mx-4">
-            <li class="nav-item mx-4">
-              <a class="nav-link navtext" href="/collections">Collections</a>
+            <li class="nav-item dropdown mx-4">
+              <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Explore
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                <li><a class="dropdown-item droptext" href="/collections">Collections</a></li>
+                <li><a class="dropdown-item droptext" href="/users">Users</a></li>
+              </ul>
             </li>
             <li class="nav-item dropdown mx-4">
               <a class="nav-link dropdown-toggle navtext" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -69,12 +75,13 @@
     <div class="mt-4 container-fluid ms-1 me-1" style="margin-left:3rem; margin-right:3rem;">
       <ul class="nav nav-tabs" id="myTab" role="tablist">
         <li class="nav-item" role="presentation">
-          <button class="nav-link active" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">Inbox</button>
+          <button class="nav-link active" id="inbox-tab" data-bs-toggle="tab" data-bs-target="#inbox" type="button" role="tab" aria-controls="inbox" aria-selected="false">Inbox</button>
         </li>
         <li class="nav-item" role="presentation">
-          <button class="nav-link" id="contact-tab" data-bs-toggle="tab" data-bs-target="#contact" type="button" role="tab" aria-controls="contact" aria-selected="false">History</button>
+          <button class="nav-link" id="history-tab" data-bs-toggle="tab" data-bs-target="#history" type="button" role="tab" aria-controls="history" aria-selected="false">History</button>
         </li>
       </ul>
+      <div class="tab-pane fade active" id="inbox" role="tabpanel" aria-labelledby="inbox-tab">
           {{#if tradesExists}}
             {{#each tradeData}}
               <div class="container-fluid d-flex flex-start justify-content-center">
@@ -133,7 +140,7 @@
             {{/each}}
           {{/if}}
         </div>
-        <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
+        <div class="tab-pane fade" id="history" role="tabpanel" aria-labelledby="history-tab">
           {{#if pastTradesExists}}
             {{#each pastTradeData}}
               <div class="container-fluid d-flex flex-start justify-content-center">
