--- a/source/index.css
+++ b/source/index.css
@@ -2,7 +2,10 @@ body {
   font-family: 'Barlow', sans-serif;
   font-size:1.4em;
   background-color: #fffdfe;
+  overflow:auto;
+
   overflow-x: hidden;
+
 }
 /* body::-webkit-scrollbar {
   display: none;
