--- a/views/collection.html
+++ b/views/collection.html
@@ -99,7 +99,7 @@
           <div class="d-flex container flex-wrap mt-3 mb-5 justify-content-center p-0" style="flex-basis: 80%; padding:none;">
             {{#each itemInfo}}
               <div class="card justify-content-center" style="max-width: 18rem; min-width:8rem; margin:1rem;">
-                <img src="{{this.mediaLink}}" class="card-img-top" alt="..." style="max-width: 18rem; min-width:8rem;">
+                <img src="{{this.mediaLink}}" class="card-img-top" alt="Image Loading..." style="max-width: 18rem; min-width:8rem;">
                 <div class="card-body card shadow d-flex justify-content-center text-center">
                   <h3 class="card-title mb-2 mt-2 " style="margin:auto;">{{this.name}}</h3>
                   <h5 class="card-title mb-2 mt-2" style="margin:auto; font-size: 1.2rem; font-weight: 400;">Collection: {{this.collectionName}}</h5>
