fixed cookie bug:

--- a/views/trades.html
+++ b/views/trades.html
@@ -81,7 +81,7 @@
           <button class="nav-link" id="history-tab" data-bs-toggle="tab" data-bs-target="#history" type="button" role="tab" aria-controls="history" aria-selected="false">History</button>
         </li>
       </ul>
-      <div class="tab-pane fade active" id="inbox" role="tabpanel" aria-labelledby="inbox-tab">
+      <div class="tab-pane fade show active" id="inbox" role="tabpanel" aria-labelledby="inbox-tab">
           {{#if tradesExists}}
             {{#each tradeData}}
               <div class="container-fluid d-flex flex-start justify-content-center">
